<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="name_user">htmtmx</string>
    <string name="welcome">Welcome htmtmx!</string>
    <string name="subtittle_1">Pendientes</string>
    <string name="subtittle_2">Usuarios</string>
    <string name="subtittle_3">Ingresos</string>
    <string name="subtittle_4">Repositories</string>
    <string name="subtittle_5">Profile Job</string>
    <string name="subtittle_6">Channel</string>
    <string name="subtittle_7">Tweets</string>
    <string name="subtittle_8">Social</string>
    <string name="subtittle_9">Pic\'s</string>
</resources>